# summer-school-2020

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  LICENSE.txt  README.md  homework-template.ipynb  pyproject.toml  requirements.dev.txt  requirements.txt  setup.cfg  tox.ini
week-2/1-libraries/: Libraries.ipynb
week-2/2-exploratory-data-analysis/: Untitled.ipynb  asteroides.ipynb
week-2/3-data-visualization/: campo_electrico.ipynb
week-2/3-data-visualization/2. Quiver and heatmaps with fields/: Electromagnetic field.ipynb
week-2/3-data-visualization/3. CMS Histgrams/: A. CMS Experiment.ipynb  B. CMS Muons.ipynb  C. CMS Dimuons.ipynb  D. CMS top quark.ipynb  experiment_cms.ipynb
week-2/3-data-visualization/3. CMS Histgrams/tools/: __init__.py  cms.py
week-2/3-data-visualization/4. Fancy plots/: A. The Julia Set.ipynb  B. Fibonaccci Sequence.ipynb  C. Celular Automata.ipynb
week-2/4-good-practices/: Introducción a los Autómatas Celulares.ipynb
week-2/solucionario/: sol_campo_electrico.ipynb
week-3/: RungeKutta.ipynb  euler.ipynb  ode_simbolico.ipynb  solucionario_week3.ipynb
week-4/: decaimiento_pion.ipynb
week-5/: matrices_cuantica.ipynb
