[tool.poetry]
name = "summer-school-2020"
version = "1.0.0"
description = ""
authors = ["zodiacfireworks <martin.vuelta@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^1.2.6"
pandas = "^0.25.3"
pandas-profiling = "^2.4.0"
numpy = "^1.18.1"
matplotlib = "^3.1.2"
scipy = "^1.4.1"
seaborn = "^0.10.0"
sympy = "^1.5.1"
scikit-learn = "^0.22.1"
nbstripout = "^0.3.7"
h5py = "^2.10.0"
tables = "^3.6.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5"
bandit = "^1.6.2"
black = "^19.10b0"
codacy-coverage = "^1.3.11"
codecov = "^2.0.15"
coverage = "^5.0.3"
flake8 = "^3.7.9"
flake8-black = "^0.1.1"
jupyterlab = "^1.2.6"
mypy = "^0.761"
pre-commit = "^1.21.0"
pydocstyle = "^5.0.2"
pylint = "^2.4.4"
pytest = "^5.3.4"
pytest-cov = "^2.8.1"
pytest-vcr = "^1.0.2"
python-dotenv = "^0.10.5"
tox = "^3.14.3"
twine = "^3.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
